  * testsuite-checking/expected-results-i486-linux-i386: new file.
  * testsuite-checking/expected-results-i486-linux-gnu-libc: new file.
  * testsuite-checking/expected-results-i686-linux-i686: new file.
  * testsuite-checking/expected-results-i686-linux-xen: new file.
  * testsuite-checking/expected-results-ia64-linux-gnu-libc: new file.
  * testsuite-checking/expected-results-powerpc-linux-gnu-libc: new file.
  * testsuite-checking/expected-results-powerpc64-linux-ppc64: new file.
  * testsuite-checking/expected-results-s390-linux-gnu-libc: new file.
  * testsuite-checking/expected-results-s390x-linux-s390x: new file.
  * testsuite-checking/expected-results-sparc64-linux-sparc64: new file.
  * testsuite-checking/expected-results-sparc-linux-gnu-libc: new file.
  * testsuite-checking/expected-results-sparcv9b-linux-sparcv9b: new file.
  * testsuite-checking/expected-results-x86_64-linux-amd64: new file.
  * testsuite-checking/expected-results-x86_64-linux-gnu-libc: new file.
  * control.in/main: build-depends on dpkg (>= 1.14.17).
  * Add symbols files for the various libraries, based on a patch by 
    Raphaël Hertzog.  Closes: #462444.
  * localedata/supported.diff: sort locales by alphabetical order.  Closes: 
    #493231.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 09 Aug 2008 21:04:41 +0200

glibc (2.7-14) unstable; urgency=low

  [ Petr Salinger ]
  * kfreebsd/local-sysdeps.diff: update to revision 2280 (from glibc-bsd).

  [ Aurelien Jarno ]
  * patches/mips/cvs-mknod.diff: new patch from upstream to allow > 255 minors
    on mips.  Closes: #493751.
  * patches/sparc/cvs-context.diff: new patch from upstream to add
    getcontext(), setcontext(), makecontext() on Sparc.  Closes: #295173.
  * patches/hppa/cvs-context.diff: new patch from upstream to add
    getcontext(), setcontext(), makecontext() on PARISC.  Closes: #492778.

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-lock-memory-clobber.diff: new patch from upstream
    to fix safety of locks.