@@ -94,8 +94,6 @@ BUILD_CXX = g++-4.3
 
 RUN_TESTSUITE = yes
 
-TIMEOUTFACTOR = 1
-
 # Set CC and CXX for cross-compiling
 ifneq ($(DEB_HOST_ARCH),$(DEB_BUILD_ARCH))
 CC     = $(DEB_HOST_GNU_TYPE)-gcc
