@@ -8,9 +8,6 @@ libc_extra_config_options = $(extra_config_options) --disable-sanity-checks
 # We need LWS CAS support
 libc_MIN_KERNEL_SUPPORTED = 2.6.9
 
-# Some tests assume a fast machine
-TIMEOUTFACTOR=2
-
 # hppa64 needs symlink /usr/hppa64-linux/include to /usr/include
 # (See: Bug#239020)  In future we may drop this file with supporting hppa64.
 
