@@ -1,6 +1,3 @@
-# Some tests assume a fast machine
-TIMEOUTFACTOR=4
-
 # Requires Linux 2.6.11 for NPTL
 libc_MIN_KERNEL_SUPPORTED = 2.6.11
 
