@@ -84,6 +84,9 @@ glibc (2.8+20080809-1) UNRELEASED; urgency=low
   * testsuite-checking/expected-results-i686-linux-i686: new file.
   * testsuite-checking/expected-results-i686-linux-xen: new file.
   * testsuite-checking/expected-results-ia64-linux-gnu-libc: new file.
+  * testsuite-checking/expected-results-mipsel-linux-gnu-libc: new file.
+  * testsuite-checking/expected-results-mips64-linux-mips64: new file.
+  * testsuite-checking/expected-results-mips32-linux-mipsn32: new file.
   * testsuite-checking/expected-results-powerpc-linux-gnu-libc: new file.
   * testsuite-checking/expected-results-powerpc64-linux-ppc64: new file.
   * testsuite-checking/expected-results-s390-linux-gnu-libc: new file.
@@ -98,6 +101,8 @@ glibc (2.8+20080809-1) UNRELEASED; urgency=low
     Raphaël Hertzog.  Closes: #462444.
   * localedata/supported.diff: sort locales by alphabetical order.  Closes: 
     #493231.
+  * debian/rules, debian/rules.d/build.mk, debian/sysdeps.mk/*: use a common 
+    huge TIMEOUTFACTOR for all architectures.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sat, 09 Aug 2008 21:04:41 +0200
 
